--- a/android-app/src/main/res/values/strings.xml
+++ b/android-app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
+
+    <!-- Core strings -->
     <string name="app_name">Enigma</string>
     <string name="title_activity_main">Team Stories</string>
+
+    <!-- Main activity cards related -->
+    <string name="main_card_large_continue_text">Continue</string>
+    <string name="main_card_large_share_text">Share</string>
+    <string name="main_card_tiny_actionOverflow_contentDescription">Related activities</string>
+    <string name="main_card_comm_share_contentDescription">Share</string>
+    <string name="main_card_comm_star_contentDescription">Mark as favorite</string>
+
 </resources>
