--- a/android-app/src/main/res/values/strings.xml
+++ b/android-app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="main_card_comm_share_contentDescription">Share</string>
     <string name="main_card_comm_star_contentDescription">Mark as favorite</string>
 
+    <string name="main_toast_no_content">This collection is empty!</string>
+
 </resources>
