Fixed a lot of lint warnings

--- a/android-app/src/main/res/values-it/strings.xml
+++ b/android-app/src/main/res/values-it/strings.xml
@@ -4,6 +4,11 @@
     <!-- Main activity cards related -->
     <string name="main_card_first_start_title">Ehilà, straniero!</string>
     <string name="main_card_first_start_content">Benvenuto in <b>Enigma</b>, tocca una carta per iniziare la sua storia. <i>Buona fortuna!</i></string>
+    <string name="main_card_large_continue_text">Continua</string>
+    <string name="main_card_large_share_text">Condividi</string>
+    <string name="main_card_tiny_actionOverflow_contentDescription">Attività collegate</string>
+    <string name="main_card_comm_share_contentDescription">Condividi</string>
+    <string name="main_card_comm_star_contentDescription">Segna come preferito</string>
 
     <string name="main_toast_no_content">Questa collezione è vuota!</string>
 
