--- a/android-app/src/main/res/values/strings.xml
+++ b/android-app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <!-- Core strings -->
-    <string name="app_name">Enigma</string>
+    <string name="app_name" translatable="false">Enigma</string>
     <string name="title_activity_main" translatable="false">Team Stories</string>
-    <string name="title_activity_quiz">Quiz</string>
+    <string name="title_activity_quiz" translatable="false">Quiz</string>
 
     <!-- Main activity cards related -->
     <string name="main_card_first_start_title">Aloha, stranger!</string>
